fixed featured margin & auto dark mode

--- a/src/_sass/_experience.scss
+++ b/src/_sass/_experience.scss
@@ -4,6 +4,11 @@
   }
   .job {
     margin-bottom: 25px;
+
+    &:last-of-type {
+      margin-bottom: -50px;
+    }
+
     .time-place {
       display: flex;
       justify-content: space-between;
