--- a/src/_sass/_featured.scss
+++ b/src/_sass/_featured.scss
@@ -6,7 +6,6 @@
     // display: flex;
     display: block;
     margin-bottom: 90px;
-    margin-left: -5%;
     width: 125%;
     @include desktop {
       width: 105%;
