--- a/src/_sass/_scroll-hint.scss
+++ b/src/_sass/_scroll-hint.scss
@@ -1,55 +1,58 @@
 $ani-speed: 2s;
 $ani-delay: 0.75s;
 
-.arrow {
+.arrows {
   display: none;
-    opacity: 0;
-    position: absolute;
-        left: 50%;
-        top: 95%;
-    transform-origin: 50% 50%;
-    transform: translate3d(-50%, -50%, 0);
+}
+
+.arrow {
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 95%;
+  transform-origin: 50% 50%;
+  transform: translate3d(-50%, -50%, 0);
 }
 
 .arrow-first {
-    animation: arrow-movement $ani-speed ease-in-out infinite;
+  animation: arrow-movement $ani-speed ease-in-out infinite;
 }
 .arrow-second {
-    animation: arrow-movement $ani-speed $ani-delay ease-in-out infinite;
+  animation: arrow-movement $ani-speed $ani-delay ease-in-out infinite;
 }
 
 .arrow:before,
 .arrow:after {
-    background: $slate;
-    content: '';
-    display: block;
-    height: 3px; 
-    position: absolute;
-        top: 0;
-        left: 0;
-    width: 25px;
+  background: $slate;
+  content: "";
+  display: block;
+  height: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
 }
 
 .arrow:before {
-    transform: rotate(45deg) translateX(-20%);
-    transform-origin: top left;
+  transform: rotate(45deg) translateX(-20%);
+  transform-origin: top left;
 }
 
 .arrow:after {
-    transform: rotate(-45deg) translateX(20%);
-    transform-origin: top right;
+  transform: rotate(-45deg) translateX(20%);
+  transform-origin: top right;
 }
 
 // Animation
 @keyframes arrow-movement {
-    0% { 
-        opacity: 0;
-        top: 90%;
-    }
-    70% {
-        opacity: 1;
-    }
-    100% { 
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+    top: 90%;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
